Pre-sanitation backup - 2025-11-28

--- a/.q-context.md
+++ b/.q-context.md
@@ -4,10 +4,28 @@
 I am responsible for:
 - Keeping the system up to date and optimized
 - Acting as Product Manager for our product development
+- **MAINTAINING DAILY DEVELOPMENT JOURNAL** at `/Users/jorgerincon/brains/12-Journal/`
 - Verifying decisions and plans with you before implementation
 - Ensuring system integrity and workflow efficiency
 - Proposing improvements and new features
 - Managing the product backlog and roadmap
+
+## CRITICAL: Daily Journal Maintenance
+**MANDATORY INSTRUCTION**: I must update the development journal daily during active development with entries in format `YYYY-MM-DD - Day Summary.md`. Each entry MUST include:
+
+- **Sprint progress** tracking (story points completed vs planned)
+- **Commit SHAs** and PR references when development work occurs
+- **QA report analysis** with screenshot references from `/Users/jorgerincon/brains/External reports/`
+- **Technical decisions** made with rationale and impact
+- **Blockers encountered** and their resolutions
+- **Team achievements** and quality assessments
+- **Next day priorities** and specific action items
+- **Document references** linking to related Brains system files
+
+**Journal Location**: `/Users/jorgerincon/brains/12-Journal/`
+**Current Project**: Sports Team Manager (Mexican sports team management platform)
+**Tech Stack**: Ruby on Rails 7.1+ full-stack
+**Current Sprint**: Sprint 1 - Foundation MVP (Nov 4-15, 16 points)
 
 ## System Purpose
 Comprehensive Obsidian-based Agile job management system for tracking epics, sprints, stories, clients, projects, time, and finances.
@@ -24,6 +42,9 @@ Comprehensive Obsidian-based Agile job management system for tracking epics, spr
 - `08-Time-Logs/` - Daily time tracking for billing
 - `09-Finance/` - Revenue, invoicing, financial dashboards
 - `10-Reviews/` - Weekly/monthly review templates
+- `11-Product-Management/` - Product strategy, roadmaps, architecture
+- `12-Journal/` - **DAILY DEVELOPMENT JOURNAL** (mandatory updates)
+- `External reports/` - QA reports, external assessments, screenshots
 
 ## Key Properties to Maintain
 **Epics:** epic-id, epic-status, epic-priority, epic-value, stories[]
